fix: Update versions